2008-04-07  Ulrich Drepper  <drepper@redhat.com>

	[BZ #5475]
	* resolv/res_init.c: Handle scope IDs in resolv.conf.

2008-04-07  Jakub Jelinek  <jakub@redhat.com>

	* malloc/mtrace.pl: Use $@ instead of $* to keep perl 5.10 quiet.

2008-04-06  Ulrich Drepper  <drepper@redhat.com>

	* po/nl.po: Update from translation team.

2008-03-31  Ulrich Drepper  <drepper@redhat.com>

	[BZ #6007]
	* string/strfry.c: Handle empty strings again.

2008-03-30  Ulrich Drepper  <drepper@redhat.com>

	[BZ #5443]
	* intl/dcigettext.c (__dcigettext): Get reader lock for locale data
	before looking for translation.
	* locale/duplocale.c: Transform __libc_setlocale_lock into rwlock.
	* locale/freelocale.c: Likewise.
	* locale/newlocale.c: Likewise.
	* locale/setlocale.c: Likewise.
	Based partially on a patch by ryo@np.css.fujitsu.com.

2008-03-30  Jakub Jelinek  <jakub@redhat.com>

	* intl/dcigettext.c (_nl_find_msg): Reread nconversions after
	acquiring wrlock.  Do conv_tab allocation while holding lock.
	* intl/Makefile: Add rules to build and run tst-gettext6.
	* intl/tst-gettext6.c: New test.
	* intl/tst-gettext6.sh: New file.

2008-03-30  Ulrich Drepper  <drepper@redhat.com>

	* po/nl.po: Update from translation team.

	* sysdeps/unix/opendir.c (__alloc_dir): If allocation fails for size
	provided through st_blksize, try the default size before giving up.

2008-03-29  Ulrich Drepper  <drepper@redhat.com>

	* stdio-common/vfprintf.c (vfprintf): Correct overflow test.

	[BZ #5939]
	* sysdeps/posix/tempname.c (__gen_tempname): Correct flag selection.

	* posix/getopt.c (_getopt_internal_r): Remove old POSIX-demanded
	error message.  POSIX today does not require the messages to be in
	a specific form.  Suggested by Jim Meyering <jim@meyering.net>.

	[BZ #5979]
	* sunrpc/auth_unix.c: Unify printed strings.
	* sunrpc/clnt_tcp.c: Likewise.
	* sunrpc/clnt_udp.c: Likewise.
	* sunrpc/clnt_unix.c: Likewise.
	* sunrpc/svc_tcp.c: Likewise.
	* sunrpc/svc_udp.c: Likewise.